--- a/feladat.html
+++ b/feladat.html
@@ -1,4 +1,4 @@
-<b>start</b> - 2023.01.09 01:10:08<br />
+<b>start</b> - 2023.01.10 01:10:10<br />
 Slovakia_Giraffe, not updated, 0.6000000000000085<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.0<br />
@@ -43,7 +43,7 @@ Netherlands_GroningenFlag, not updated, 0.6825938566552878<br />
 Netherlands_PacMunzee, not updated, 0.0<br />
 UnitedKingdom_BristolBalloon, not updated, 0.0<br />
 USA_USMGoldenEagles, not updated, 0.1207729468599048<br />
-USA_Turtle, not updated, 0.8818342151675438<br />
+USA_Turtle, not updated, 0.9700176366843039<br />
 Finland_BioOtokka, not updated, 0.0<br />
 Canada_GatineauFMGGarden, not updated, 0.730000000000004<br />
 Lithuania_KaunasBasketball, not updated, 0.20000000000000284<br />
@@ -280,7 +280,7 @@ Hungary_AlsogallaJoyPrize, not updated, 0.0<br />
 Hungary_MaXGarden kihagyva (100%), <br />
 Hungary_Crossbow_Tatabanya, not updated, 0.0<br />
 Hungary_StroopwafelInvasionInFelsogalla, not updated, 0.0<br />
-Hungary_SZTE, not updated, -39.26<br />
+Hungary_SZTE, not updated, -38.85<br />
 Hungary_MarioInVac, not updated, 0.0<br />
 Hungary_LovagokKertje kihagyva (100%), <br />
 Hungary_ShieldKecskemet, not updated, 0.0<br />
@@ -340,7 +340,7 @@ UnitedKingdom_StroopwafelInvasionInAndover, not updated, 0.0<br />
 Australia_StroopwafelInvasionInDapto, not updated, 0.0<br />
 USA_StroopwafelInvasionInFallingWaters, not updated, 0.0<br />
 USA_StroopwafelInvasionInHagerstown, not updated, 0.0<br />
-Australia_StroopwafelInvasionInKelmscott, <b>updated</b>, 56, <a href="https://www.munzee.com/map/qd63rd421/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_StroopwafelInvasionInKelmscott.json" target="_blank">json</a><br />
+Australia_StroopwafelInvasionInKelmscott, not updated, 0.0<br />
 UnitedKingdom_StroopwafelInvasionInKingswood, not updated, 0.0<br />
 Sweden_StroopwafelInvasionInLinkoping, not updated, 0.0<br />
 Germany_StroopwafelInvasionInMeitingen, not updated, 0.0<br />
@@ -460,11 +460,5 @@ Lithuania_FebruaryEvent, not updated, 0.0<br />
 USA_TheLuckyFungi kihagyva (100%), <br />
 USA_SunAndMoon, not updated, 0.0<br />
 USA_LexingtonSurprise, not updated, 0.0<br />
-----csoportok<br />
-----városok<br />
-----felhasználók<br />
-----témák<br />
-World_topic_StroopwafelInvasion, <b>updated</b>, <a href="https://www.munzee.com/map/u2mn7yzxz/14.998" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/World_topic_StroopwafelInvasion.json" target="_blank">json</a><br />
-Australia_topic_StroopwafelInvasion, <b>updated</b>, <a href="https://www.munzee.com/map/r1ps2ge1w/14.9981" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_topic_StroopwafelInvasion.json" target="_blank">json</a><br />
-<b>stop</b> - 2023.01.09 01:28:31<br />
-összesen 1103<br />
+<b>stop</b> - 2023.01.10 01:28:11<br />
+összesen 1080<br />
