--- a/feladat.html
+++ b/feladat.html
@@ -339,3 +339,10 @@ Australia_StroopwafelInvasionInShepparton kihagyva (100%), <br />
 UnitedKingdom_StroopwafelInvasionInAndover, not updated, 0.0<br />
 Australia_StroopwafelInvasionInDapto, not updated, 0.0<br />
 USA_StroopwafelInvasionInFallingWaters, <b>updated</b>, 63, <a href="https://www.munzee.com/map/dr095u8tn/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_StroopwafelInvasionInFallingWaters.json" target="_blank">json</a><br />
+USA_StroopwafelInvasionInHagerstown, not updated, 0.0<br />
+Australia_StroopwafelInvasionInKelmscott, not updated, 0.0<br />
+UnitedKingdom_StroopwafelInvasionInKingswood, not updated, 0.0<br />
+Sweden_StroopwafelInvasionInLinkoping, not updated, 0.0<br />
+Germany_StroopwafelInvasionInMeitingen, not updated, 0.0<br />
+Canada_StroopwafelInvasionInNewWestminster, not updated, 0.0<br />
+Australia_StroopwafelInvasionInNorlane, <b>updated</b>, 61, <a href="https://www.munzee.com/map/r1nxks295/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_StroopwafelInvasionInNorlane.json" target="_blank">json</a><br />
