--- a/feladat.html
+++ b/feladat.html
@@ -346,3 +346,4 @@ Sweden_StroopwafelInvasionInLinkoping, not updated, 0.0<br />
 Germany_StroopwafelInvasionInMeitingen, not updated, 0.0<br />
 Canada_StroopwafelInvasionInNewWestminster, not updated, 0.0<br />
 Australia_StroopwafelInvasionInNorlane, <b>updated</b>, 61, <a href="https://www.munzee.com/map/r1nxks295/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_StroopwafelInvasionInNorlane.json" target="_blank">json</a><br />
+Netherlands_StroopwafelInvasionInOspel, <b>updated</b>, 74, <a href="https://www.munzee.com/map/u1h5gdgny/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Netherlands_StroopwafelInvasionInOspel.json" target="_blank">json</a><br />
