--- a/feladat.html
+++ b/feladat.html
@@ -1,11 +1,11 @@
-<b>start</b> - 2023.01.11 01:10:07<br />
+<b>start</b> - 2023.01.12 01:10:08<br />
 Slovakia_Giraffe, not updated, 0.6000000000000085<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.0<br />
-USA_PrattvilleTrillium, <b>updated</b>, 250, <a href="https://www.munzee.com/map/djf8bbhmk/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_PrattvilleTrillium.json" target="_blank">json</a><br />
+USA_PrattvilleTrillium, not updated, 0.0<br />
 Netherlands_EvolutionBeeckestijn kihagyva (100%), <br />
 Hungary_TatabanyaBlackhole, not updated, 0.5399999999999991<br />
-Hungary_VotiveChurch, not updated, -38.61000000000001<br />
+Hungary_VotiveChurch, not updated, -38.7<br />
 Germany_WappenHalberstadt, not updated, 0.0<br />
 UnitedKingdom_SouthStoke, not updated, 0.6800000000000068<br />
 Slovakia_ChristmasStable kihagyva (100%), <br />
@@ -179,297 +179,4 @@ Germany_BerlinMunzeePin, not updated, 0.13000000000000256<br />
 Germany_DiamantBerlin, not updated, 0.0<br />
 Germany_BerlinBear, not updated, 0.0<br />
 Germany_HonowWappen, not updated, 0.3355704697986539<br />
-Canada_GatineauEvo, not updated, 0.759999999999998<br />
-Germany_ColorsBonn kihagyva (100%), <br />
-Germany_BTHVN2020 kihagyva (100%), <br />
-Canada_GatineauScarletTulip kihagyva (100%), <br />
-Canada_RumballMachine kihagyva (100%), <br />
-Canada_OttawaFireworks kihagyva (100%), <br />
-Canada_HospitalLove kihagyva (100%), <br />
-Hungary_Q94 kihagyva (100%), <br />
-Hungary_ChristmasTreeInBudapest kihagyva (100%), <br />
-Hungary_RWG kihagyva (100%), <br />
-Hungary_Grail kihagyva (100%), <br />
-Hungary_DVTKInMiskolc, not updated, 0.0<br />
-Hungary_Beagle kihagyva (100%), <br />
-Hungary_ElectricDebrecen, not updated, 0.9501187648456124<br />
-Hungary_KodalysViolin kihagyva (100%), <br />
-Hungary_SantaClaussSackKecskemet kihagyva (100%), <br />
-Hungary_64color kihagyva (100%), <br />
-Hungary_ShieldBudapest, not updated, 0.8199999999999932<br />
-Hungary_ShieldMiskolc, not updated, 0.0<br />
-Hungary_ShieldEger, not updated, 0.0<br />
-Hungary_MunzeeLogo kihagyva (100%), <br />
-Hungary_GreatChurch kihagyva (100%), <br />
-Canada_SpringInOttawa kihagyva (100%), <br />
-Canada_OttawaNewYears kihagyva (100%), <br />
-Canada_SummerInOttawa kihagyva (100%), <br />
-USA_TheAppleValleyApple kihagyva (100%), <br />
-USA_LighteksMinnesotaWild, not updated, 0.14999999999999858<br />
-USA_ChristmasWreath kihagyva (100%), <br />
-USA_WinterOlympics2018 kihagyva (100%), <br />
-USA_R2D2 kihagyva (100%), <br />
-USA_TwinCitiesSnowman kihagyva (100%), <br />
-USA_SimpsonsDonut kihagyva (100%), <br />
-USA_AppleValleyEagle, not updated, 0.0<br />
-USA_DorothyToTheEmerald kihagyva (100%), <br />
-USA_BabyYodaLovesMunzeeMania2020 kihagyva (100%), <br />
-Hungary_KavicsbanyaKecskemet kihagyva (100%), <br />
-Hungary_GyorVgFarm kihagyva (100%), <br />
-Hungary_GyoriVasutiKert, not updated, 0.0<br />
-Hungary_Colors kihagyva (100%), <br />
-Hungary_TocoskertsArrows2 kihagyva (100%), <br />
-Hungary_TocoskertsArrows3, not updated, 0.0<br />
-Hungary_60Color kihagyva (100%), <br />
-Hungary_Cata-Joy kihagyva (100%), <br />
-Hungary_FlatDebrecen, not updated, 0.0<br />
-Hungary_Debrecen2202, not updated, 0.0<br />
-Hungary_EvolutionDebrecen kihagyva (100%), <br />
-Hungary_JewelSandwich, not updated, 0.0<br />
-Hungary_Cimbi kihagyva (100%), <br />
-Hungary_Picu kihagyva (100%), <br />
-Hungary_Honey kihagyva (100%), <br />
-Hungary_QR kihagyva (100%), <br />
-Hungary_DebreceniKereszt kihagyva (100%), <br />
-Hungary_60Flat kihagyva (100%), <br />
-UnitedKingdom_TheLondonDonutCat, not updated, 0.0<br />
-UnitedKingdom_HeathrowCrossbowArrow kihagyva (100%), <br />
-UnitedKingdom_JustSmileLondon, not updated, 0.0<br />
-UnitedKingdom_HeathrowFlatSquares, not updated, 0.519999999999996<br />
-UnitedKingdom_LondonUnderground, not updated, 0.0<br />
-UnitedKingdom_RuleBritanniaArrow kihagyva (100%), <br />
-UnitedKingdom_CherryLaneCemetery-CrossGarden kihagyva (100%), <br />
-UnitedKingdom_EvolutionStrip kihagyva (100%), <br />
-UnitedKingdom_WestLondonJewel kihagyva (100%), <br />
-UnitedKingdom_TheBunnyFields kihagyva (100%), <br />
-UnitedKingdom_EvolutionRainbow kihagyva (100%), <br />
-UnitedKingdom_NorthfieldsLondonUndergroundStation, not updated, 0.0<br />
-UnitedKingdom_ShadesGarden kihagyva (100%), <br />
-UnitedKingdom_AddingtonSunflowerGarden, not updated, 0.0<br />
-UnitedKingdom_SailingBoat kihagyva (100%), <br />
-UnitedKingdom_HendonCircle kihagyva (100%), <br />
-Australia_9thBirthdayInQueensland kihagyva (100%), <br />
-Australia_MayPole kihagyva (100%), <br />
-Australia_PyramidOBadges kihagyva (100%), <br />
-Australia_QLD-Dingo kihagyva (100%), <br />
-Australia_HappyTenMunzee kihagyva (100%), <br />
-Australia_QLDPerm-Temp, not updated, -42.0<br />
-Australia_UnicornInThePark kihagyva (100%), <br />
-Germany_Berlin-HighVoltage kihagyva (100%), <br />
-Germany_ColoursOfBerlin kihagyva (100%), <br />
-Germany_9thBirthdayInBerlin kihagyva (100%), <br />
-Germany_EvoInBerlinSteglitz kihagyva (100%), <br />
-Germany_BerlinEvoGarden-PotsdamerPlatz kihagyva (100%), <br />
-Hungary_Debrecen kihagyva (100%), <br />
-Hungary_DeoCachingClan kihagyva (100%), <br />
-Hungary_TocoskertsArrows kihagyva (100%), <br />
-UnitedKingdom_WoodlandAnimals-Fox, not updated, 0.0<br />
-UnitedKingdom_WoodlandAnimals-Badger, not updated, 0.0<br />
-Canada_OttawaCancerRibbon kihagyva (100%), <br />
-Canada_OttawaGoldfish kihagyva (100%), <br />
-Canada_BananaBread kihagyva (100%), <br />
-Canada_Elephriends kihagyva (100%), <br />
-Canada_LizzysUnicorn kihagyva (100%), <br />
-Canada_JeffsFarm kihagyva (100%), <br />
-UnitedKingdom_TheYellowSubmarine kihagyva (100%), <br />
-Germany_JohnTheFab41 kihagyva (100%), <br />
-Germany_RingoTheFab4, not updated, 0.0<br />
-Germany_GeorgeTheFab42, not updated, 0.9299999999999997<br />
-Germany_PaulTheFab43, not updated, 0.9299999999999926<br />
-Hungary_AlsogallaJoyPrize, not updated, 0.0<br />
-Hungary_MaXGarden kihagyva (100%), <br />
-Hungary_Crossbow_Tatabanya, not updated, 0.0<br />
-Hungary_StroopwafelInvasionInFelsogalla, <b>updated</b>, 85, <a href="https://www.munzee.com/map/u2mn7yzxz/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_StroopwafelInvasionInFelsogalla.json" target="_blank">json</a><br />
-Hungary_SZTE, not updated, -38.85<br />
-Hungary_MarioInVac, not updated, 0.0<br />
-Hungary_LovagokKertje kihagyva (100%), <br />
-Hungary_ShieldKecskemet, not updated, 0.0<br />
-Hungary_Mini kihagyva (100%), <br />
-Hungary_MinimalIceCubeInBaja kihagyva (100%), <br />
-Hungary_SailboatAtLakeBalaton, not updated, 0.0<br />
-Hungary_EyesInTheNight kihagyva (100%), <br />
-Hungary_PomazLocomotiv kihagyva (100%), <br />
-Slovakia_Bratislava kihagyva (100%), <br />
-Slovakia_ChilliKiller, not updated, 0.0<br />
-Slovakia_LakeLighthousePainting, not updated, 0.0<br />
-Slovakia_ChargeBratislava kihagyva (100%), <br />
-Slovakia_VirtualJoy kihagyva (100%), <br />
-Slovakia_ElectricLetters kihagyva (100%), <br />
-Slovakia_DevinCastle kihagyva (100%), <br />
-Slovakia_EvoFlowerBratislava kihagyva (100%), <br />
-Slovakia_1stDayEvo kihagyva (100%), <br />
-Slovakia_BosniaFlagInBratislava kihagyva (100%), <br />
-Slovakia_AgentSun kihagyva (100%), <br />
-Slovakia_CandleTombstone kihagyva (100%), <br />
-Canada_SecretLantern kihagyva (100%), <br />
-Canada_OttawaCross kihagyva (100%), <br />
-Canada_MysteryBoat kihagyva (100%), <br />
-Canada_SaveTheMonarchs kihagyva (100%), <br />
-Canada_FlutteringByOrleans kihagyva (100%), <br />
-Canada_MunzeeViolin kihagyva (100%), <br />
-Canada_MysteryKeyboard kihagyva (100%), <br />
-Canada_MunzeeDrumSet kihagyva (100%), <br />
-Canada_MunzeeGuitar kihagyva (100%), <br />
-Canada_MunzeeTrumpet kihagyva (100%), <br />
-Canada_OttawaLeprechaun kihagyva (100%), <br />
-Canada_SandcastleFun kihagyva (100%), <br />
-Canada_OttawaTornado kihagyva (100%), <br />
-Canada_MunzeeSnowglobe kihagyva (100%), <br />
-Canada_RainbowStar kihagyva (100%), <br />
-Canada_TheSecretEgg kihagyva (100%), <br />
-Canada_JimmysTractor kihagyva (100%), <br />
-Canada_BeeStrongJeffeth kihagyva (100%), <br />
-Canada_JimmysDog kihagyva (100%), <br />
-Canada_JimmysBoat kihagyva (100%), <br />
-Canada_LizzysKitty kihagyva (100%), <br />
-Canada_RocklandEasterEggs kihagyva (100%), <br />
-Canada_ClairesCake kihagyva (100%), <br />
-Canada_StanleyForDad kihagyva (100%), <br />
-Canada_RocklandTree kihagyva (100%), <br />
-Canada_JimmysRocket kihagyva (100%), <br />
-Canada_BreadInRockland kihagyva (100%), <br />
-Canada_MarchingFlats kihagyva (100%), <br />
-Canada_RocklandHeart kihagyva (100%), <br />
-Canada_LizzysElephant kihagyva (100%), <br />
-Canada_AdventuresInRockland kihagyva (100%), <br />
-Canada_SecretLove kihagyva (100%), <br />
-Canada_LizzysGoldfish kihagyva (100%), <br />
-Belgium_StroopwafelInvasionInVosselaar kihagyva (100%), <br />
-Australia_StroopwafelInvasionInShepparton kihagyva (100%), <br />
-UnitedKingdom_StroopwafelInvasionInAndover, not updated, 0.0<br />
-Australia_StroopwafelInvasionInDapto, not updated, 0.0<br />
-USA_StroopwafelInvasionInFallingWaters, <b>updated</b>, 63, <a href="https://www.munzee.com/map/dr095u8tn/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_StroopwafelInvasionInFallingWaters.json" target="_blank">json</a><br />
-USA_StroopwafelInvasionInHagerstown, not updated, 0.0<br />
-Australia_StroopwafelInvasionInKelmscott, not updated, 0.0<br />
-UnitedKingdom_StroopwafelInvasionInKingswood, not updated, 0.0<br />
-Sweden_StroopwafelInvasionInLinkoping, not updated, 0.0<br />
-Germany_StroopwafelInvasionInMeitingen, not updated, 0.0<br />
-Canada_StroopwafelInvasionInNewWestminster, not updated, 0.0<br />
-Australia_StroopwafelInvasionInNorlane, <b>updated</b>, 61, <a href="https://www.munzee.com/map/r1nxks295/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_StroopwafelInvasionInNorlane.json" target="_blank">json</a><br />
-Netherlands_StroopwafelInvasionInOspel, <b>updated</b>, 74, <a href="https://www.munzee.com/map/u1h5gdgny/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Netherlands_StroopwafelInvasionInOspel.json" target="_blank">json</a><br />
-UnitedKingdom_StroopwafelInvasionInThringstone, not updated, 0.0<br />
-Australia_StroopwafelInvasionInWonthaggi, not updated, 0.0<br />
-Netherlands_StroopwafelInvasionInArnhem kihagyva (100%), <br />
-Germany_StroopwafelInvasionInBerlin kihagyva (100%), <br />
-Canada_StroopwafelInvasionInBrossard kihagyva (100%), <br />
-Australia_StroopwafelInvasionInBrownsPlains kihagyva (100%), <br />
-Germany_StroopwafelInvasionInChemnitz kihagyva (100%), <br />
-USA_StroopwafelInvasionInDesertLodge kihagyva (100%), <br />
-USA_StroopwafelInvasionInEscondido kihagyva (100%), <br />
-Canada_StroopwafelInvasionInGeorgetown kihagyva (100%), <br />
-USA_StroopwafelInvasionInGlenOaks kihagyva (100%), <br />
-Sweden_StroopwafelInvasionInGotenborg kihagyva (100%), <br />
-Netherlands_StroopwafelInvasionInGouda kihagyva (100%), <br />
-Netherlands_StroopwafelInvasionInGroningen kihagyva (100%), <br />
-Netherlands_StroopwafelInvasionInHoofddorp kihagyva (100%), <br />
-USA_StroopwafelInvasionInMHQ kihagyva (100%), <br />
-Australia_StroopwafelInvasionInMorayfield kihagyva (100%), <br />
-Australia_StroopwafelInvasionInOnkaparingaHills kihagyva (100%), <br />
-Australia_StroopwafelInvasionInPerth kihagyva (100%), <br />
-UnitedKingdom_StroopwafelInvasionInPlympton kihagyva (100%), <br />
-USA_StroopwafelInvasionInRaleigh kihagyva (100%), <br />
-UnitedKingdom_StroopwafelInvasionInBedford kihagyva (100%), <br />
-USA_MHQBash4Casino kihagyva (100%), <br />
-USA_MHQV4Pin kihagyva (100%), <br />
-USA_ZeeKnight, not updated, 0.0<br />
-USA_MichaelMyersHalloween, not updated, 0.0<br />
-USA_MunzeeLogoHistory2011, not updated, 0.0<br />
-USA_MunzeeLogoHistory2013 kihagyva (100%), <br />
-USA_MunzeeLogoHistory2014, not updated, 0.0<br />
-USA_MunzeeLogoHistory2015, not updated, 0.0<br />
-USA_PiratesFlag kihagyva (100%), <br />
-USA_Zelda, not updated, 0.0<br />
-USA_TeenageMutantNinjaTurtles, not updated, 0.0<br />
-Germany_FBombBerlin kihagyva (100%), <br />
-Hungary_FBombBudapest kihagyva (100%), <br />
-USA_FBombCedarRapids kihagyva (100%), <br />
-Denmark_FBombHammel kihagyva (100%), <br />
-USA_FBombMcKinney kihagyva (100%), <br />
-USA_FBombTampa kihagyva (100%), <br />
-USA_RoverPin, not updated, 0.0<br />
-USA_EmeraldInAnchorage kihagyva (100%), <br />
-USA_EmeraldInChesterfield kihagyva (100%), <br />
-USA_EmeraldInMcKinney kihagyva (100%), <br />
-Australia_EmeraldInMelbourne kihagyva (100%), <br />
-UnitedKingdom_EmeraldInGreenwich kihagyva (100%), <br />
-Australia_EmeraldInSydney kihagyva (100%), <br />
-BosniaHerzegovina_PanonskaJezeraTuzla, not updated, 0.0<br />
-Serbia_JapanseMaple kihagyva (100%), <br />
-Greece_TheLighthouseOfChania kihagyva (100%), <br />
-Jersey_JerzeeClan, not updated, 0.0<br />
-Jersey_JerseyColorPaw, not updated, 0.0<br />
-Jersey_StOuen kihagyva (100%), <br />
-Portugal_MadeiraMonumental kihagyva (100%), <br />
-Portugal_LargoDaPaz kihagyva (100%), <br />
-Portugal_1MadeiraSapphiresTwin kihagyva (100%), <br />
-Portugal_Portinho kihagyva (100%), <br />
-Croatia_CroatiaLocketHeart, not updated, 0.0<br />
-Greece_Zakynthos, not updated, 0.0<br />
-Portugal_PortoNovoHighVoltage, not updated, 0.0<br />
-Portugal_HighVoltageMadeiraIslandFirst kihagyva (100%), <br />
-Portugal_HighVoltageMadeiraIslandBlack kihagyva (100%), <br />
-UnitedKingdom_OhioFlagLondon, not updated, 0.0<br />
-France_FrancesFirstPlayerMadeDinan, not updated, 0.0<br />
-Netherlands_NetherlandsTulipAmstelveen kihagyva (100%), <br />
-USA_MOAChristmasCard kihagyva (100%), <br />
-Germany_AreYouXZeePerienced, not updated, 0.0<br />
-Germany_MixedGardenRT kihagyva (100%), <br />
-Germany_AppenzellerSennenhundRT, not updated, 0.030000000000001137<br />
-Germany_PatchworkRT, not updated, 0.5899999999999963<br />
-Germany_FlatsAppenzellerRT, not updated, 0.030000000000001137<br />
-Germany_WeddingDay kihagyva (100%), <br />
-Germany_SportparkEvolutionsRT1, not updated, 0.0<br />
-Germany_SportparkEvolutionsRT2, not updated, 0.28999999999999204<br />
-Germany_Peace, not updated, 0.0<br />
-Germany_PatchworkDusslingen, not updated, 0.0<br />
-USA_MunzeeMania2019, not updated, 0.0<br />
-USA_MOADwarfLeprechaun kihagyva (100%), <br />
-USA_MOAPenguin kihagyva (100%), <br />
-USA_MOANutcracker kihagyva (100%), <br />
-USA_IceCreamEagan kihagyva (100%), <br />
-Germany_AdlerKatapulte, not updated, 0.6799999999999926<br />
-USA_SuperChuckerShield kihagyva (100%), <br />
-USA_DogDaysOfSummer kihagyva (100%), <br />
-USA_GingerbreadMan_Edina kihagyva (100%), <br />
-USA_NEOneAlien, not updated, 0.0<br />
-USA_ComoEvoFlowers kihagyva (100%), <br />
-USA_WitchHat, not updated, 0.0<br />
-USA_LRTEVOTrain, not updated, 0.0<br />
-USA_JackOZEEacula kihagyva (100%), <br />
-USA_Minnesota kihagyva (100%), <br />
-USA_MinnesotaMoose kihagyva (100%), <br />
-USA_ChristmasSnowman kihagyva (100%), <br />
-USA_MOAYeti kihagyva (100%), <br />
-USA_MOAFlower kihagyva (100%), <br />
-USA_MOAElectricMonster kihagyva (100%), <br />
-Lithuania_VirusBomb, not updated, 0.0<br />
-Lithuania_KaisiadorysHammer kihagyva (100%), <br />
-Lithuania_KaisiadorysMiniElectric kihagyva (100%), <br />
-Lithuania_KaisiadorysCrossbow kihagyva (100%), <br />
-Lithuania_BalticWay30 kihagyva (100%), <br />
-Austria_FrauenkirchenOwl, not updated, 0.0<br />
-Slovakia_SpaceInvaderPrievidza kihagyva (100%), <br />
-Lithuania_KaunasGreenLeaf kihagyva (100%), <br />
-Lithuania_KaunasScatter1 kihagyva (100%), <br />
-Lithuania_KaunasScatter2, not updated, 0.0<br />
-Lithuania_KaunasLightning, not updated, 0.0<br />
-Lithuania_RotusesSquareKaunas kihagyva (100%), <br />
-Lithuania_PistachioIceCreamInKaunas kihagyva (100%), <br />
-Lithuania_KaunasMagnet, not updated, 0.0<br />
-Lithuania_FebruaryEvent, not updated, 0.0<br />
-USA_TheLuckyFungi kihagyva (100%), <br />
-USA_SunAndMoon, not updated, 0.0<br />
-USA_LexingtonSurprise, not updated, 0.0<br />
-----csoportok<br />
-----városok<br />
-Hungary_city_Tatabanya, <b>updated</b>, <a href="https://www.munzee.com/map/u2mndxhne/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_city_Tatabanya.json" target="_blank">json</a><br />
-USA_city_Prattville, <b>updated</b>, <a href="https://www.munzee.com/map/djf88xhm3/14.999" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_city_Prattville.json" target="_blank">json</a><br />
-----felhasználók<br />
-----témák<br />
-World_topic_StroopwafelInvasion, <b>updated</b>, <a href="https://www.munzee.com/map/u2mn7yzxz/14.998" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/World_topic_StroopwafelInvasion.json" target="_blank">json</a><br />
-Australia_topic_StroopwafelInvasion, <b>updated</b>, <a href="https://www.munzee.com/map/r1ps2ge1w/14.9981" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_topic_StroopwafelInvasion.json" target="_blank">json</a><br />
-Hungary_topic_StroopwafelInvasion, <b>updated</b>, <a href="https://www.munzee.com/map/u2mn7yzxz/14.9981" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Hungary_topic_StroopwafelInvasion.json" target="_blank">json</a><br />
-Netherlands_topic_StroopwafelInvasion, <b>updated</b>, <a href="https://www.munzee.com/map/u15rfnm03/14.9981" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Netherlands_topic_StroopwafelInvasion.json" target="_blank">json</a><br />
-USA_topic_StroopwafelInvasion, <b>updated</b>, <a href="https://www.munzee.com/map/9vgkbm7fn/14.9981" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_topic_StroopwafelInvasion.json" target="_blank">json</a><br />
-<b>stop</b> - 2023.01.11 01:35:22<br />
-összesen 1514<br />
+Canada_GatineauEvo, <b>updated</b>, 134, <a href="https://www.munzee.com/map/f244tv1bn/15.7" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Canada_GatineauEvo.json" target="_blank">json</a><br />
