--- a/feladat.html
+++ b/feladat.html
@@ -1,2 +1,8 @@
 <b>start</b> - 2023.01.12 05:37:04<br />
 USA_FlatRobBirthday, <b>updated</b>, 616, <a href="https://www.munzee.com/map/9zqyctk1k/15.7" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_FlatRobBirthday.json" target="_blank">json</a> <b>100%</b><br />
+----csoportok<br />
+----városok<br />
+----felhasználók<br />
+----témák<br />
+<b>stop</b> - 2023.01.12 05:47:27<br />
+összesen 622<br />
