--- a/log.html
+++ b/log.html
@@ -6587,3 +6587,8 @@ USA_FlatRobBirthday, <b>updated</b>, 616, <a href="https://www.munzee.com/map/9z
 ----témák<br />
 <b>stop</b> - 2023.01.12 05:47:27<br />
 összesen 622<br />
+<br />
+<b>start</b> - 2023.01.12 05:50:44<br />
+USA_FlatRobBirthday kihagyva (100%), <br />
+<b>stop</b> - 2023.01.12 05:50:46<br />
+összesen 2<br />
