--- a/feladat.html
+++ b/feladat.html
@@ -1,4 +1,2 @@
-<b>start</b> - 2023.01.12 05:50:44<br />
-USA_FlatRobBirthday kihagyva (100%), <br />
-<b>stop</b> - 2023.01.12 05:50:46<br />
-összesen 2<br />
+<b>start</b> - 2023.01.12 05:51:38<br />
+USA_WestDesMoinesPacMan, <b>updated</b>, 650, <a href="https://www.munzee.com/map/9zmk6nyww/15.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_WestDesMoinesPacMan.json" target="_blank">json</a><br />
