--- a/feladat.html
+++ b/feladat.html
@@ -1,2 +1,8 @@
 <b>start</b> - 2023.01.12 05:51:38<br />
 USA_WestDesMoinesPacMan, <b>updated</b>, 650, <a href="https://www.munzee.com/map/9zmk6nyww/15.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_WestDesMoinesPacMan.json" target="_blank">json</a><br />
+----csoportok<br />
+----városok<br />
+----felhasználók<br />
+----témák<br />
+<b>stop</b> - 2023.01.12 06:02:34<br />
+összesen 655<br />
