--- a/log.html
+++ b/log.html
@@ -6592,3 +6592,12 @@ USA_FlatRobBirthday, <b>updated</b>, 616, <a href="https://www.munzee.com/map/9z
 USA_FlatRobBirthday kihagyva (100%), <br />
 <b>stop</b> - 2023.01.12 05:50:46<br />
 összesen 2<br />
+<br />
+<b>start</b> - 2023.01.12 05:51:38<br />
+USA_WestDesMoinesPacMan, <b>updated</b>, 650, <a href="https://www.munzee.com/map/9zmk6nyww/15.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_WestDesMoinesPacMan.json" target="_blank">json</a><br />
+----csoportok<br />
+----városok<br />
+----felhasználók<br />
+----témák<br />
+<b>stop</b> - 2023.01.12 06:02:34<br />
+összesen 655<br />
