--- a/feladat.html
+++ b/feladat.html
@@ -1,2 +1,2 @@
-<b>start</b> - 2023.01.12 06:06:44<br />
-USA_WestDesMoinesPacMan, <b>updated</b>, 624, <a href="https://www.munzee.com/map/9zmk6nyww/15.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_WestDesMoinesPacMan.json" target="_blank">json</a><br />
+<b>start</b> - 2023.01.12 06:22:34<br />
+USA_CRFeather, <b>updated</b>, 720, <a href="https://www.munzee.com/map/9zqydmwhp/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_CRFeather.json" target="_blank">json</a> <b>100%</b><br />
