--- a/log.html
+++ b/log.html
@@ -6601,3 +6601,21 @@ USA_WestDesMoinesPacMan, <b>updated</b>, 650, <a href="https://www.munzee.com/ma
 ----témák<br />
 <b>stop</b> - 2023.01.12 06:02:34<br />
 összesen 655<br />
+<br />
+<b>start</b> - 2023.01.12 06:06:44<br />
+USA_WestDesMoinesPacMan, <b>updated</b>, 624, <a href="https://www.munzee.com/map/9zmk6nyww/15.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_WestDesMoinesPacMan.json" target="_blank">json</a><br />
+----csoportok<br />
+----városok<br />
+----felhasználók<br />
+----témák<br />
+<b>stop</b> - 2023.01.12 06:17:14<br />
+összesen 630<br />
+<br />
+<b>start</b> - 2023.01.12 06:22:34<br />
+USA_CRFeather, <b>updated</b>, 720, <a href="https://www.munzee.com/map/9zqydmwhp/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_CRFeather.json" target="_blank">json</a> <b>100%</b><br />
+----csoportok<br />
+----városok<br />
+----felhasználók<br />
+----témák<br />
+<b>stop</b> - 2023.01.12 06:34:40<br />
+összesen 726<br />
