--- a/feladat.html
+++ b/feladat.html
@@ -1,8 +1,2 @@
-<b>start</b> - 2023.01.12 06:22:34<br />
-USA_CRFeather, <b>updated</b>, 720, <a href="https://www.munzee.com/map/9zqydmwhp/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_CRFeather.json" target="_blank">json</a> <b>100%</b><br />
-----csoportok<br />
-----városok<br />
-----felhasználók<br />
-----témák<br />
-<b>stop</b> - 2023.01.12 06:34:40<br />
-összesen 726<br />
+<b>start</b> - 2023.01.12 06:39:44<br />
+USA_BlackCat, <b>updated</b>, 339, <a href="https://www.munzee.com/map/9yuwp8m1z/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_BlackCat.json" target="_blank">json</a> <b>100%</b><br />
