--- a/feladat.html
+++ b/feladat.html
@@ -1,8 +1,2 @@
-<b>start</b> - 2023.01.12 06:39:44<br />
-USA_BlackCat, <b>updated</b>, 339, <a href="https://www.munzee.com/map/9yuwp8m1z/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_BlackCat.json" target="_blank">json</a> <b>100%</b><br />
-----csoportok<br />
-----városok<br />
-----felhasználók<br />
-----témák<br />
-<b>stop</b> - 2023.01.12 06:45:30<br />
-összesen 346<br />
+<b>start</b> - 2023.01.12 06:56:33<br />
+USA_CRJonesParkBirthday7, <b>updated</b>, 322, <a href="https://www.munzee.com/map/9zqydku0v/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_CRJonesParkBirthday7.json" target="_blank">json</a> <b>100%</b><br />
