--- a/log.html
+++ b/log.html
@@ -6637,3 +6637,12 @@ USA_CRJonesParkBirthday7, <b>updated</b>, 322, <a href="https://www.munzee.com/m
 ----témák<br />
 <b>stop</b> - 2023.01.12 07:02:03<br />
 összesen 329<br />
+<br />
+<b>start</b> - 2023.01.12 07:20:00<br />
+USA_NoelridgeMystery, <b>updated</b>, 436, <a href="https://www.munzee.com/map/9zqz432fm/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_NoelridgeMystery.json" target="_blank">json</a> <b>100%</b><br />
+----csoportok<br />
+----városok<br />
+----felhasználók<br />
+----témák<br />
+<b>stop</b> - 2023.01.12 07:27:24<br />
+összesen 443<br />
