--- a/feladat.html
+++ b/feladat.html
@@ -1,2 +1,8 @@
 <b>start</b> - 2023.01.12 07:32:49<br />
 USA_WestDesMoinesStrawberry, <b>updated</b>, 103, <a href="https://www.munzee.com/map/9zmk65e9v/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_WestDesMoinesStrawberry.json" target="_blank">json</a><br />
+----csoportok<br />
+----városok<br />
+----felhasználók<br />
+----témák<br />
+<b>stop</b> - 2023.01.12 07:34:38<br />
+összesen 109<br />
