--- a/log.html
+++ b/log.html
@@ -6646,3 +6646,12 @@ USA_NoelridgeMystery, <b>updated</b>, 436, <a href="https://www.munzee.com/map/9
 ----témák<br />
 <b>stop</b> - 2023.01.12 07:27:24<br />
 összesen 443<br />
+<br />
+<b>start</b> - 2023.01.12 07:32:49<br />
+USA_WestDesMoinesStrawberry, <b>updated</b>, 103, <a href="https://www.munzee.com/map/9zmk65e9v/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_WestDesMoinesStrawberry.json" target="_blank">json</a><br />
+----csoportok<br />
+----városok<br />
+----felhasználók<br />
+----témák<br />
+<b>stop</b> - 2023.01.12 07:34:38<br />
+összesen 109<br />
