--- a/feladat.html
+++ b/feladat.html
@@ -1,4 +1,4 @@
-<b>start</b> - 2023.01.12 10:09:08<br />
+<b>start</b> - 2023.01.12 19:34:07<br />
 Slovakia_Giraffe, not updated, 0.6000000000000085<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.0<br />
@@ -44,7 +44,7 @@ Netherlands_PacMunzee, not updated, 0.0<br />
 UnitedKingdom_BristolBalloon, not updated, 0.0<br />
 USA_USMGoldenEagles, not updated, 0.1207729468599048<br />
 USA_Turtle, not updated, 0.9700176366843039<br />
-Finland_BioOtokka, <b>hiba</b> a táblázat megnyitásakor, RESOURCE_EXHAUSTED, 35<br />
+Finland_BioOtokka, not updated, 0.0<br />
 Canada_GatineauFMGGarden, not updated, 0.730000000000004<br />
 Lithuania_KaunasBasketball, not updated, 0.20000000000000284<br />
 Spain_PalmaDeMallorca-OfficialFlag, not updated, 0.0<br />
@@ -280,7 +280,7 @@ Hungary_AlsogallaJoyPrize, not updated, 0.0<br />
 Hungary_MaXGarden kihagyva (100%), <br />
 Hungary_Crossbow_Tatabanya, not updated, 0.0<br />
 Hungary_StroopwafelInvasionInFelsogalla, not updated, 0.0<br />
-Hungary_SZTE, not updated, -38.85<br />
+Hungary_SZTE, <b>hiba</b> a táblázat megnyitásakor, UNAVAILABLE, 0<br />
 Hungary_MarioInVac, not updated, 0.0<br />
 Hungary_LovagokKertje kihagyva (100%), <br />
 Hungary_ShieldKecskemet, not updated, 0.0<br />
@@ -416,75 +416,4 @@ Germany_AreYouXZeePerienced, not updated, 0.0<br />
 Germany_MixedGardenRT kihagyva (100%), <br />
 Germany_AppenzellerSennenhundRT, not updated, 0.030000000000001137<br />
 Germany_PatchworkRT, not updated, 0.6499999999999986<br />
-Germany_FlatsAppenzellerRT, not updated, 0.6899999999999977<br />
-Germany_WeddingDay kihagyva (100%), <br />
-Germany_SportparkEvolutionsRT1, not updated, 0.0<br />
-Germany_SportparkEvolutionsRT2, not updated, 0.28999999999999204<br />
-Germany_Peace, not updated, 0.0<br />
-Germany_PatchworkDusslingen, not updated, 0.0<br />
-USA_MunzeeMania2019, not updated, 0.0<br />
-USA_MOADwarfLeprechaun kihagyva (100%), <br />
-USA_MOAPenguin kihagyva (100%), <br />
-USA_MOANutcracker kihagyva (100%), <br />
-USA_IceCreamEagan kihagyva (100%), <br />
-Germany_AdlerKatapulte, not updated, 0.6799999999999926<br />
-USA_SuperChuckerShield kihagyva (100%), <br />
-USA_DogDaysOfSummer kihagyva (100%), <br />
-USA_GingerbreadMan_Edina kihagyva (100%), <br />
-USA_NEOneAlien, not updated, 0.0<br />
-USA_ComoEvoFlowers kihagyva (100%), <br />
-USA_WitchHat, not updated, 0.0<br />
-USA_LRTEVOTrain, not updated, 0.0<br />
-USA_JackOZEEacula kihagyva (100%), <br />
-USA_Minnesota kihagyva (100%), <br />
-USA_MinnesotaMoose kihagyva (100%), <br />
-USA_ChristmasSnowman kihagyva (100%), <br />
-USA_MOAYeti kihagyva (100%), <br />
-USA_MOAFlower kihagyva (100%), <br />
-USA_MOAElectricMonster kihagyva (100%), <br />
-Lithuania_VirusBomb, not updated, 0.0<br />
-Lithuania_KaisiadorysHammer kihagyva (100%), <br />
-Lithuania_KaisiadorysMiniElectric kihagyva (100%), <br />
-Lithuania_KaisiadorysCrossbow kihagyva (100%), <br />
-Lithuania_BalticWay30 kihagyva (100%), <br />
-Austria_FrauenkirchenOwl, not updated, 0.0<br />
-Slovakia_SpaceInvaderPrievidza kihagyva (100%), <br />
-Lithuania_KaunasGreenLeaf kihagyva (100%), <br />
-Lithuania_KaunasScatter1 kihagyva (100%), <br />
-Lithuania_KaunasScatter2, not updated, 0.0<br />
-Lithuania_KaunasLightning, not updated, 0.0<br />
-Lithuania_RotusesSquareKaunas kihagyva (100%), <br />
-Lithuania_PistachioIceCreamInKaunas kihagyva (100%), <br />
-Lithuania_KaunasMagnet, not updated, 0.0<br />
-Lithuania_FebruaryEvent, not updated, 0.0<br />
-USA_TheLuckyFungi kihagyva (100%), <br />
-USA_SunAndMoon, not updated, 0.0<br />
-USA_LexingtonSurprise, not updated, 0.0<br />
-Australia_BrisbaneHeartPopUp, <b>updated</b>, 183, <a href="https://www.munzee.com/map/r7hg9yzzd/16.6" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_BrisbaneHeartPopUp.json" target="_blank">json</a> <b>100%</b><br />
-Australia_QldJacaranda, <b>updated</b>, 670, <a href="https://www.munzee.com/map/r7hucvdgx/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_QldJacaranda.json" target="_blank">json</a> <b>100%</b><br />
-Australia_FairyWren, <b>updated</b>, 79, <a href="https://www.munzee.com/map/r7hucu2rc/16.5" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_FairyWren.json" target="_blank">json</a> <b>100%</b><br />
-Germany_BerlinCardsPin, <b>updated</b>, 382, <a href="https://www.munzee.com/map/u336z2hgg/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_BerlinCardsPin.json" target="_blank">json</a> <b>100%</b><br />
-Germany_Pretzel, <b>updated</b>, 538, <a href="https://www.munzee.com/map/u336we05x/15.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_Pretzel.json" target="_blank">json</a> <b>100%</b><br />
-Germany_AdventurePortal2, <b>updated</b>, 339, <a href="https://www.munzee.com/map/u336wpx05/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_AdventurePortal2.json" target="_blank">json</a><br />
-Germany_BerlinVoidMapleChess, <b>updated</b>, 276, <a href="https://www.munzee.com/map/u336tzs18/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_BerlinVoidMapleChess.json" target="_blank">json</a><br />
-Germany_SweetHeart, <b>updated</b>, 332, <a href="https://www.munzee.com/map/u336v9wb8/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_SweetHeart.json" target="_blank">json</a> <b>100%</b><br />
-Germany_WittenauerMischMasch, <b>updated</b>, 339, <a href="https://www.munzee.com/map/u337pnnqb/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_WittenauerMischMasch.json" target="_blank">json</a><br />
-Germany_BerlinBYOG2020, <b>updated</b>, 191, <a href="https://www.munzee.com/map/u337njw0q/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_BerlinBYOG2020.json" target="_blank">json</a> <b>100%</b><br />
-Germany_MarzahnerBockwindmuhle, <b>updated</b>, 66, <a href="https://www.munzee.com/map/u33dutke7/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_MarzahnerBockwindmuhle.json" target="_blank">json</a> <b>100%</b><br />
-Germany_GermanHeart, <b>updated</b>, 231, <a href="https://www.munzee.com/map/u33dukpdk/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_GermanHeart.json" target="_blank">json</a> <b>100%</b><br />
-Australia_RUMportal, <b>updated</b>, 278, <a href="https://www.munzee.com/map/r1pm0nwy0/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_RUMportal.json" target="_blank">json</a> <b>100%</b><br />
-Australia_MiniPortal1, <b>updated</b>, 61, <a href="https://www.munzee.com/map/r6ugfkzsp/16.5" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_MiniPortal1.json" target="_blank">json</a> <b>100%</b><br />
-Denmark_MiniPortal2, <b>updated</b>, 69, <a href="https://www.munzee.com/map/u4p001h4e/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Denmark_MiniPortal2.json" target="_blank">json</a> <b>100%</b><br />
-Germany_MattPin, <b>updated</b>, 282, <a href="https://www.munzee.com/map/u336wmhfr/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_MattPin.json" target="_blank">json</a> <b>100%</b><br />
-Germany_CrossbowShield, <b>updated</b>, 617, <a href="https://www.munzee.com/map/u33dbv6xm/15.6" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_CrossbowShield.json" target="_blank">json</a> <b>100%</b><br />
-Germany_FlatLouPin, <b>updated</b>, 225, <a href="https://www.munzee.com/map/u336wt0df/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_FlatLouPin.json" target="_blank">json</a> <b>100%</b><br />
-Germany_FlatHammockPin, <b>updated</b>, 218, <a href="https://www.munzee.com/map/u336wv7qr/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_FlatHammockPin.json" target="_blank">json</a> <b>100%</b><br />
-Germany_FlatRobPin, <b>updated</b>, 289, <a href="https://www.munzee.com/map/u336wv919/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_FlatRobPin.json" target="_blank">json</a> <b>100%</b><br />
-Germany_CrossbowPin, <b>updated</b>, 289, <a href="https://www.munzee.com/map/u336wt64s/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_CrossbowPin.json" target="_blank">json</a> <b>100%</b><br />
-Germany_MysteryPin, <b>updated</b>, 284, <a href="https://www.munzee.com/map/u336wtw14/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_MysteryPin.json" target="_blank">json</a> <b>100%</b><br />
-Germany_GreeniePin, <b>updated</b>, 228, <a href="https://www.munzee.com/map/u336wmp7k/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_GreeniePin.json" target="_blank">json</a> <b>100%</b><br />
-Germany_SperenbergTeddy, <b>updated</b>, 336, <a href="https://www.munzee.com/map/u338852tq/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_SperenbergTeddy.json" target="_blank">json</a> <b>100%</b><br />
-Germany_LogoOfGermanSoccerClub, <b>updated</b>, 708, <a href="https://www.munzee.com/map/u38eejzgu/15.8" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_LogoOfGermanSoccerClub.json" target="_blank">json</a><br />
-Germany_ErnieInVolksdorf, <b>updated</b>, 845, <a href="https://www.munzee.com/map/u1x1pjrgy/14.9" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_ErnieInVolksdorf.json" target="_blank">json</a><br />
-Germany_Quietscheentchen, <b>updated</b>, 365, <a href="https://www.munzee.com/map/u1x1ps8ct/15.8" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_Quietscheentchen.json" target="_blank">json</a> <b>100%</b><br />
-Germany_Hammaburg, <b>updated</b>, 655, <a href="https://www.munzee.com/map/u1x0es633/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_Hammaburg.json" target="_blank">json</a><br />
+Germany_FlatsAppenzellerRT, <b>updated</b>, 2225, <a href="https://www.munzee.com/map/u0wecspcn/14.51" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_FlatsAppenzellerRT.json" target="_blank">json</a><br />
