--- a/feladat.html
+++ b/feladat.html
@@ -1,4 +1,4 @@
-<b>start</b> - 2023.01.12 19:34:07<br />
+<b>start</b> - 2023.01.13 01:10:08<br />
 Slovakia_Giraffe, not updated, 0.6000000000000085<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.0<br />
@@ -280,7 +280,7 @@ Hungary_AlsogallaJoyPrize, not updated, 0.0<br />
 Hungary_MaXGarden kihagyva (100%), <br />
 Hungary_Crossbow_Tatabanya, not updated, 0.0<br />
 Hungary_StroopwafelInvasionInFelsogalla, not updated, 0.0<br />
-Hungary_SZTE, <b>hiba</b> a táblázat megnyitásakor, UNAVAILABLE, 0<br />
+Hungary_SZTE, not updated, -38.85<br />
 Hungary_MarioInVac, not updated, 0.0<br />
 Hungary_LovagokKertje kihagyva (100%), <br />
 Hungary_ShieldKecskemet, not updated, 0.0<br />
@@ -414,84 +414,6 @@ Netherlands_NetherlandsTulipAmstelveen kihagyva (100%), <br />
 USA_MOAChristmasCard kihagyva (100%), <br />
 Germany_AreYouXZeePerienced, not updated, 0.0<br />
 Germany_MixedGardenRT kihagyva (100%), <br />
-Germany_AppenzellerSennenhundRT, not updated, 0.030000000000001137<br />
-Germany_PatchworkRT, not updated, 0.6499999999999986<br />
-Germany_FlatsAppenzellerRT, <b>updated</b>, 2225, <a href="https://www.munzee.com/map/u0wecspcn/14.51" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_FlatsAppenzellerRT.json" target="_blank">json</a><br />
-Germany_WeddingDay kihagyva (100%), <br />
-Germany_SportparkEvolutionsRT1, not updated, 0.0<br />
-Germany_SportparkEvolutionsRT2, not updated, 0.28999999999999204<br />
-Germany_Peace, not updated, 0.0<br />
-Germany_PatchworkDusslingen, not updated, 0.0<br />
-USA_MunzeeMania2019, not updated, 0.0<br />
-USA_MOADwarfLeprechaun kihagyva (100%), <br />
-USA_MOAPenguin kihagyva (100%), <br />
-USA_MOANutcracker kihagyva (100%), <br />
-USA_IceCreamEagan kihagyva (100%), <br />
-Germany_AdlerKatapulte, not updated, 0.6799999999999926<br />
-USA_SuperChuckerShield kihagyva (100%), <br />
-USA_DogDaysOfSummer kihagyva (100%), <br />
-USA_GingerbreadMan_Edina kihagyva (100%), <br />
-USA_NEOneAlien, <b>updated</b>, 250, <a href="https://www.munzee.com/map/cbj8nmyg8/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_NEOneAlien.json" target="_blank">json</a><br />
-USA_ComoEvoFlowers kihagyva (100%), <br />
-USA_WitchHat, not updated, 0.0<br />
-USA_LRTEVOTrain, not updated, 0.0<br />
-USA_JackOZEEacula kihagyva (100%), <br />
-USA_Minnesota kihagyva (100%), <br />
-USA_MinnesotaMoose kihagyva (100%), <br />
-USA_ChristmasSnowman kihagyva (100%), <br />
-USA_MOAYeti kihagyva (100%), <br />
-USA_MOAFlower kihagyva (100%), <br />
-USA_MOAElectricMonster kihagyva (100%), <br />
-Lithuania_VirusBomb, not updated, 0.0<br />
-Lithuania_KaisiadorysHammer kihagyva (100%), <br />
-Lithuania_KaisiadorysMiniElectric kihagyva (100%), <br />
-Lithuania_KaisiadorysCrossbow kihagyva (100%), <br />
-Lithuania_BalticWay30 kihagyva (100%), <br />
-Austria_FrauenkirchenOwl, not updated, 0.0<br />
-Slovakia_SpaceInvaderPrievidza kihagyva (100%), <br />
-Lithuania_KaunasGreenLeaf kihagyva (100%), <br />
-Lithuania_KaunasScatter1 kihagyva (100%), <br />
-Lithuania_KaunasScatter2, not updated, 0.0<br />
-Lithuania_KaunasLightning, not updated, 0.0<br />
-Lithuania_RotusesSquareKaunas kihagyva (100%), <br />
-Lithuania_PistachioIceCreamInKaunas kihagyva (100%), <br />
-Lithuania_KaunasMagnet, not updated, 0.0<br />
-Lithuania_FebruaryEvent, not updated, 0.0<br />
-USA_TheLuckyFungi kihagyva (100%), <br />
-USA_SunAndMoon, not updated, 0.0<br />
-USA_LexingtonSurprise, not updated, 0.0<br />
-Australia_BrisbaneHeartPopUp kihagyva (100%), <br />
-Australia_QldJacaranda kihagyva (100%), <br />
-Australia_FairyWren kihagyva (100%), <br />
-Germany_BerlinCardsPin kihagyva (100%), <br />
-Germany_Pretzel kihagyva (100%), <br />
-Germany_AdventurePortal2, not updated, 0.0<br />
-Germany_BerlinVoidMapleChess, not updated, 0.0<br />
-Germany_SweetHeart kihagyva (100%), <br />
-Germany_WittenauerMischMasch, not updated, 0.0<br />
-Germany_BerlinBYOG2020 kihagyva (100%), <br />
-Germany_MarzahnerBockwindmuhle kihagyva (100%), <br />
-Germany_GermanHeart kihagyva (100%), <br />
-Australia_RUMportal kihagyva (100%), <br />
-Australia_MiniPortal1 kihagyva (100%), <br />
-Denmark_MiniPortal2 kihagyva (100%), <br />
-Germany_MattPin kihagyva (100%), <br />
-Germany_CrossbowShield kihagyva (100%), <br />
-Germany_FlatLouPin kihagyva (100%), <br />
-Germany_FlatHammockPin kihagyva (100%), <br />
-Germany_FlatRobPin kihagyva (100%), <br />
-Germany_CrossbowPin kihagyva (100%), <br />
-Germany_MysteryPin kihagyva (100%), <br />
-Germany_GreeniePin kihagyva (100%), <br />
-Germany_SperenbergTeddy kihagyva (100%), <br />
-Germany_LogoOfGermanSoccerClub, not updated, 0.0<br />
-Germany_ErnieInVolksdorf, not updated, 0.0<br />
-Germany_Quietscheentchen kihagyva (100%), <br />
-Germany_Hammaburg, not updated, 0.0<br />
-Germany_FCStPauli, <b>updated</b>, 1002, <a href="https://www.munzee.com/map/u1x076pj4/14.7" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_FCStPauli.json" target="_blank">json</a><br />
-Germany_YinYangNeustadt, <b>updated</b>, 162, <a href="https://www.munzee.com/map/u1xey2pvq/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_YinYangNeustadt.json" target="_blank">json</a><br />
-Denmark_TheRainbowwaveInHillested, <b>updated</b>, 117, <a href="https://www.munzee.com/map/u38ps1mck/15.6" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Denmark_TheRainbowwaveInHillested.json" target="_blank">json</a><br />
-Denmark_SoparkenMaribo, <b>updated</b>, 107, <a href="https://www.munzee.com/map/u38ptekkf/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Denmark_SoparkenMaribo.json" target="_blank">json</a> <b>100%</b><br />
-Denmark_NonneMaribo, <b>updated</b>, 482, <a href="https://www.munzee.com/map/u38pw6e8n/15.6" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Denmark_NonneMaribo.json" target="_blank">json</a> <b>100%</b><br />
-Denmark_ZeecretSundby, <b>updated</b>, 101, <a href="https://www.munzee.com/map/u38rt9mqj/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Denmark_ZeecretSundby.json" target="_blank">json</a> <b>100%</b><br />
-Denmark_FjerNykobing, <b>updated</b>, 892, <a href="https://www.munzee.com/map/u38rw3795/14.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Denmark_FjerNykobing.json" target="_blank">json</a><br />
+Germany_AppenzellerSennenhundRT, not updated, 0.09000000000000341<br />
+Germany_PatchworkRT, not updated, 0.8399999999999963<br />
+Germany_FlatsAppenzellerRT, <b>updated</b>, 2176, <a href="https://www.munzee.com/map/u0wecspcn/14.51" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Germany_FlatsAppenzellerRT.json" target="_blank">json</a><br />
