--- a/feladat.html
+++ b/feladat.html
@@ -502,3 +502,4 @@ Denmark_NVGogglesSoro, <b>updated</b>, 259, <a href="https://www.munzee.com/map/
 Denmark_ZeecretFrederiksberg, <b>hiba</b> a táblázat megnyitásakor, UNAVAILABLE, 185<br />
 Denmark_DetSpogerIHaslev, <b>updated</b>, 152, <a href="https://www.munzee.com/map/u3b6xxv9f/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Denmark_DetSpogerIHaslev.json" target="_blank">json</a> <b>100%</b><br />
 Denmark_ZeecretFensmark, <b>updated</b>, 101, <a href="https://www.munzee.com/map/u3b6kqsbz/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Denmark_ZeecretFensmark.json" target="_blank">json</a> <b>100%</b><br />
+Denmark_FlatFensmark, <b>updated</b>, 514, <a href="https://www.munzee.com/map/u3b6kxrtm/16.1" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Denmark_FlatFensmark.json" target="_blank">json</a> <b>100%</b><br />
