--- a/feladat.html
+++ b/feladat.html
@@ -507,3 +507,4 @@ Denmark_ZeecretAppenaes, <b>updated</b>, 91, <a href="https://www.munzee.com/map
 Denmark_ZeecretHilleroed, <b>updated</b>, 100, <a href="https://www.munzee.com/map/u3by0xm2f/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Denmark_ZeecretHilleroed.json" target="_blank">json</a> <b>100%</b><br />
 Denmark_FlatSquare, <b>updated</b>, 273, <a href="https://www.munzee.com/map/u3by0rexn/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Denmark_FlatSquare.json" target="_blank">json</a> <b>100%</b><br />
 USA_HotelEvo, <b>updated</b>, 271, <a href="https://www.munzee.com/map/9zqy6k6uy/16.4" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_HotelEvo.json" target="_blank">json</a> <b>100%</b><br />
+USA_Emoji, <b>updated</b>, 853, <a href="https://www.munzee.com/map/9zvwzm81g/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_Emoji.json" target="_blank">json</a><br />
