--- a/feladat.html
+++ b/feladat.html
@@ -522,3 +522,4 @@ USA_KauffmanLegacyParkQuilt, <b>updated</b>, 1107, <a href="https://www.munzee.c
 USA_KCEgyptianZodiacExpanded, <b>updated</b>, 708, <a href="https://www.munzee.com/map/9yuwpc9wb/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_KCEgyptianZodiacExpanded.json" target="_blank">json</a> <b>100%</b><br />
 USA_Marion, <b>updated</b>, 287, <a href="https://www.munzee.com/map/9zqz5cxxw/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_Marion.json" target="_blank">json</a> <b>100%</b><br />
 USA_Dragonfly, <b>updated</b>, 258, <a href="https://www.munzee.com/map/9zr0ny7yb/15.7" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_Dragonfly.json" target="_blank">json</a><br />
+USA_ElectricalEvolution, <b>updated</b>, 151, <a href="https://www.munzee.com/map/9z7dvdwq0/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_ElectricalEvolution.json" target="_blank">json</a><br />
