--- a/feladat.html
+++ b/feladat.html
@@ -524,3 +524,4 @@ USA_Marion, <b>updated</b>, 287, <a href="https://www.munzee.com/map/9zqz5cxxw/1
 USA_Dragonfly, <b>updated</b>, 258, <a href="https://www.munzee.com/map/9zr0ny7yb/15.7" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_Dragonfly.json" target="_blank">json</a><br />
 USA_ElectricalEvolution, <b>updated</b>, 151, <a href="https://www.munzee.com/map/9z7dvdwq0/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_ElectricalEvolution.json" target="_blank">json</a><br />
 USA_CFPumpkin, <b>updated</b>, 195, <a href="https://www.munzee.com/map/9zw3b0pd4/15.8" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_CFPumpkin.json" target="_blank">json</a><br />
+USA_Marion4LeafClover, <b>updated</b>, 149, <a href="https://www.munzee.com/map/9zqz5c5fx/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_Marion4LeafClover.json" target="_blank">json</a> <b>100%</b><br />
