--- a/feladat.html
+++ b/feladat.html
@@ -526,3 +526,4 @@ USA_ElectricalEvolution, <b>updated</b>, 151, <a href="https://www.munzee.com/ma
 USA_CFPumpkin, <b>updated</b>, 195, <a href="https://www.munzee.com/map/9zw3b0pd4/15.8" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_CFPumpkin.json" target="_blank">json</a><br />
 USA_Marion4LeafClover, <b>updated</b>, 149, <a href="https://www.munzee.com/map/9zqz5c5fx/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_Marion4LeafClover.json" target="_blank">json</a> <b>100%</b><br />
 USA_Popcorn, <b>updated</b>, 265, <a href="https://www.munzee.com/map/9zqz553b0/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_Popcorn.json" target="_blank">json</a><br />
+USA_UnofficialCREvo, <b>updated</b>, 355, <a href="https://www.munzee.com/map/9zqyd8hgw/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_UnofficialCREvo.json" target="_blank">json</a><br />
