--- a/feladat.html
+++ b/feladat.html
@@ -527,3 +527,4 @@ USA_CFPumpkin, <b>updated</b>, 195, <a href="https://www.munzee.com/map/9zw3b0pd
 USA_Marion4LeafClover, <b>updated</b>, 149, <a href="https://www.munzee.com/map/9zqz5c5fx/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_Marion4LeafClover.json" target="_blank">json</a> <b>100%</b><br />
 USA_Popcorn, <b>updated</b>, 265, <a href="https://www.munzee.com/map/9zqz553b0/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_Popcorn.json" target="_blank">json</a><br />
 USA_UnofficialCREvo, <b>updated</b>, 355, <a href="https://www.munzee.com/map/9zqyd8hgw/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_UnofficialCREvo.json" target="_blank">json</a><br />
+USA_CRElectricMystery, <b>updated</b>, 567, <a href="https://www.munzee.com/map/9zqy9w1zy/16.3" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_CRElectricMystery.json" target="_blank">json</a> <b>100%</b><br />
