--- a/feladat.html
+++ b/feladat.html
@@ -500,3 +500,35 @@ Denmark_JuletraeIViby kihagyva (100%), <br />
 Denmark_ZeecretViby kihagyva (100%), <br />
 Denmark_NVGogglesSoro kihagyva (100%), <br />
 Denmark_ZeecretFrederiksberg, <b>updated</b>, 96, <a href="https://www.munzee.com/map/u3b5nznf2/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Denmark_ZeecretFrederiksberg.json" target="_blank">json</a> <b>100%</b><br />
+Denmark_DetSpogerIHaslev kihagyva (100%), <br />
+Denmark_ZeecretFensmark kihagyva (100%), <br />
+Denmark_FlatFensmark kihagyva (100%), <br />
+Denmark_ZeecretAppenaes kihagyva (100%), <br />
+Denmark_ZeecretHilleroed kihagyva (100%), <br />
+Denmark_FlatSquare kihagyva (100%), <br />
+USA_HotelEvo kihagyva (100%), <br />
+USA_Emoji, not updated, 0.0<br />
+USA_ElectricJHawk, not updated, 0.0<br />
+USA_DesMoinesGreetingCards, not updated, 0.0<br />
+USA_KCNightLights1 kihagyva (100%), <br />
+USA_KCNightLights2 kihagyva (100%), <br />
+USA_KCNightLights3 kihagyva (100%), <br />
+USA_KCNightLights4 kihagyva (100%), <br />
+USA_KCNightLights5 kihagyva (100%), <br />
+USA_KansasCityPanda, not updated, 0.0<br />
+USA_ResearchHospital kihagyva (100%), <br />
+USA_KCAmericanFlag kihagyva (100%), <br />
+USA_KauffmanLegacyParkQuilt kihagyva (100%), <br />
+USA_KCEgyptianZodiacExpanded kihagyva (100%), <br />
+USA_Marion kihagyva (100%), <br />
+USA_Dragonfly, not updated, 0.0<br />
+USA_ElectricalEvolution, not updated, 0.0<br />
+USA_CFPumpkin, not updated, 0.0<br />
+USA_Marion4LeafClover kihagyva (100%), <br />
+USA_Popcorn, not updated, 0.0<br />
+USA_UnofficialCREvo, not updated, 0.0<br />
+USA_CRElectricMystery kihagyva (100%), <br />
+USA_CRHolidayPizza kihagyva (100%), <br />
+USA_CRRose kihagyva (100%), <br />
+USA_CRHonorCross kihagyva (100%), <br />
+USA_WatertownShammy, <b>updated</b>, 465, <a href="https://www.munzee.com/map/9zfzw2yck/15.8" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_WatertownShammy.json" target="_blank">json</a> <b>100%</b><br />
