--- a/feladat.html
+++ b/feladat.html
@@ -532,3 +532,4 @@ USA_CRHolidayPizza kihagyva (100%), <br />
 USA_CRRose kihagyva (100%), <br />
 USA_CRHonorCross kihagyva (100%), <br />
 USA_WatertownShammy, <b>updated</b>, 465, <a href="https://www.munzee.com/map/9zfzw2yck/15.8" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_WatertownShammy.json" target="_blank">json</a> <b>100%</b><br />
+USA_CatapultPit, <b>updated</b>, 565, <a href="https://www.munzee.com/map/9zfzqxujb/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_CatapultPit.json" target="_blank">json</a> <b>100%</b><br />
