--- a/feladat.html
+++ b/feladat.html
@@ -535,3 +535,4 @@ USA_WatertownShammy, <b>updated</b>, 465, <a href="https://www.munzee.com/map/9z
 USA_CatapultPit, <b>updated</b>, 565, <a href="https://www.munzee.com/map/9zfzqxujb/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_CatapultPit.json" target="_blank">json</a> <b>100%</b><br />
 USA_Crossbow, <b>updated</b>, 708, <a href="https://www.munzee.com/map/9zfzt6nct/15.7" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_Crossbow.json" target="_blank">json</a><br />
 USA_BowlingBash, <b>updated</b>, 200, <a href="https://www.munzee.com/map/9zfzsg1dq/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_BowlingBash.json" target="_blank">json</a> <b>100%</b><br />
+USA_AtlanticDuck, <b>updated</b>, 126, <a href="https://www.munzee.com/map/9zk7tg974/15.7" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_AtlanticDuck.json" target="_blank">json</a><br />
